test/libsolidity/syntaxTests/inlineAssembly/invalid/push_disallowed.sol
contract C {
    function f() pure public {
        assembly {
            push0()
            push1()
            push2()
            push3()
            push4()
            push5()
            push6()
            push7()
            push8()
            push9()
            push10()
            push11()
            push12()
            push13()
            push14()
            push15()
            push16()
            push17()
            push18()
            push19()
            push20()
            push21()
            push22()
            push23()
            push24()
            push25()
            push26()
            push27()
            push28()
            push29()
            push30()
            push31()
            push32()
        }
    }
}
// ----
// DeclarationError 4619: (75-80): Function "push0" not found.
// DeclarationError 4619: (95-100): Function "push1" not found.
// DeclarationError 4619: (115-120): Function "push2" not found.
// DeclarationError 4619: (135-140): Function "push3" not found.
// DeclarationError 4619: (155-160): Function "push4" not found.
// DeclarationError 4619: (175-180): Function "push5" not found.
// DeclarationError 4619: (195-200): Function "push6" not found.
// DeclarationError 4619: (215-220): Function "push7" not found.
// DeclarationError 4619: (235-240): Function "push8" not found.
// DeclarationError 4619: (255-260): Function "push9" not found.
// DeclarationError 4619: (275-281): Function "push10" not found.
// DeclarationError 4619: (296-302): Function "push11" not found.
// DeclarationError 4619: (317-323): Function "push12" not found.
// DeclarationError 4619: (338-344): Function "push13" not found.
// DeclarationError 4619: (359-365): Function "push14" not found.
// DeclarationError 4619: (380-386): Function "push15" not found.
// DeclarationError 4619: (401-407): Function "push16" not found.
// DeclarationError 4619: (422-428): Function "push17" not found.
// DeclarationError 4619: (443-449): Function "push18" not found.
// DeclarationError 4619: (464-470): Function "push19" not found.
// DeclarationError 4619: (485-491): Function "push20" not found.
// DeclarationError 4619: (506-512): Function "push21" not found.
// DeclarationError 4619: (527-533): Function "push22" not found.
// DeclarationError 4619: (548-554): Function "push23" not found.
// DeclarationError 4619: (569-575): Function "push24" not found.
// DeclarationError 4619: (590-596): Function "push25" not found.
// DeclarationError 4619: (611-617): Function "push26" not found.
// DeclarationError 4619: (632-638): Function "push27" not found.
// DeclarationError 4619: (653-659): Function "push28" not found.
// DeclarationError 4619: (674-680): Function "push29" not found.
// DeclarationError 4619: (695-701): Function "push30" not found.
// DeclarationError 4619: (716-722): Function "push31" not found.
// DeclarationError 4619: (737-743): Function "push32" not found.
